# c_trae_8

./: .gitignore  BitonicSorter.h  CMakeLists.txt  IPlugin.h  MathFunctions.h  PluginReloader.cpp  PluginReloader.h  README.md  ThreadPoolSimple.h  VectorExpr.h  build_main.bat  json_parser.h  main.cpp  persistent_ac.cpp  string_algo.cpp  string_algo.h  string_literal.h  suffix_automaton.h
plugins/: ExamplePlugin.cpp  ExamplePlugin.h  build_plugin.bat
